--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
   <body>
   <script>
+    function zoom{
+      let x=event.ClientX;
+      let y=event.ClientY;
+      
+    }
   </script>
   </body>
   </html>
