--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
   <body>
   <script>
-    function zoom{
+    function zoom(){
       let x=event.ClientX;
       let y=event.ClientY;
-      
+
     }
   </script>
   </body>
