--- a/index.html
+++ b/index.html
@@ -3,13 +3,17 @@
   <body>
   <script>
   let zoomLevel=0
-    function zoom(){
-    if (zoomLevel<1){
-    zoomLevel++
-    let x = event.clientX>50
-    let y = event.clientY<50
-      document.getElementById("zoomer").src="Images/zoom"+zoomLevel+"x"+x+"y"+y+".jpg";
-    }}
+  function boolToInt(bool){
+  if (bool){return 1}
+  else {return 0}
+  }
+  function zoom(){
+  if (zoomLevel<1){
+  zoomLevel++
+  let x = boolToInt(event.clientX>50)
+  let y = boolToInt(event.clientY<50)
+    document.getElementById("zoomer").src="Images/zoom"+zoomLevel+"x"+x+"y"+y+".jpg";
+  }}
   </script>
   <img id="zoomer" onclick="zoom()" src="Images/zoom0.jpg" style="width:100px;height:100px"></img>
   </body>
