add reset button

--- a/index.html
+++ b/index.html
@@ -23,5 +23,6 @@
   }}
   </script>
   <img id="zoomer" onclick="zoom()" src="Images/zoom0.jpg" style="width:750px;height:750px"></img>
+  <button onclick="resetZoom()">Reset Zoom</button>
   </body>
   </html>
