--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   else {return 0}
   }
   function setImg(src){
-    document.getElementById("zoomer").src=src;
+    document.getElementById("zoomer").src="Images/"+src;
   }
   function resetZoom(){
     zoomLevel=0
@@ -19,7 +19,7 @@
   zoomLevel++
   let x = boolToInt(event.clientX>375)
   let y = boolToInt(event.clientY<375)
-  setImg("Images/zoom"+zoomLevel+"x"+x+"y"+y+".jpg")
+  setImg(+zoomLevel+"x"+x+"y"+y+".jpg")
   }}
   </script>
   <img id="zoomer" onclick="zoom()" src="Images/zoom0.jpg" style="width:750px;height:750px"></img>
